--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "antd": "^4.12.2",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
@@ -105,6 +106,7 @@
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0"
   },
+  "proxy": "http://localhost:7001",
   "jest": {
     "roots": [
       "<rootDir>/src"
